# crater

./: CLAUDE.md  Cargo.toml  README.md  justfile
crates/core/: Cargo.toml
crates/core/migrations/: 0001_init.sql  0002_artwork.sql
crates/core/src/: db.rs  digest_runner.rs  digests.rs  error.rs  filters.rs  lib.rs  session.rs  tracks.rs
crates/core/tests/: digests.rs  tracks.rs
crates/core/tests/helpers/: mod.rs
crates/sc_client/: Cargo.toml
crates/sc_client/examples/: search_demo.rs
crates/sc_client/src/: client.rs  client_id.rs  error.rs  lib.rs  oauth.rs  playlist.rs  types.rs
crates/sc_client/tests/: live_api.rs
crates/server/: Cargo.toml
crates/server/src/: auth.rs  config.rs  error.rs  lib.rs  main.rs  scheduler.rs  state.rs
crates/server/src/routes/: digests.rs  mod.rs  playlists.rs  search.rs  settings.rs  stream.rs  tracks.rs  ui.rs  ws.rs
crates/server/tests/: live.rs  smoke.rs
crates/server/tests/common/: mod.rs
docs/: 01-core-crate.md  02-server-api.md  03-ui-design.md  04-oauth-capture.md  README.md
