[workspace]
resolver = "2"
members = [
    "crates/sc_client",
    "crates/core",
    # Added in later sessions:
    # "crates/server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Jordan"]
license = "MIT"
repository = "https://github.com/jordan/crater"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"
once_cell = "1"
