[package]
name = "crater-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Business logic and data layer for crater"

[dependencies]
sc_client   = { path = "../sc_client" }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
sqlx        = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "macros", "migrate"] }
chrono      = { version = "0.4", features = ["serde"] }
uuid        = { version = "1",   features = ["v4", "serde"] }
cron        = "0.12"

[dev-dependencies]
tokio              = { workspace = true }
tracing-subscriber = { workspace = true }
