[package]
name            = "crater"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description     = "Self-hosted SoundCloud crate-digging tool"

[[bin]]
name = "crater"
path = "src/main.rs"

[dependencies]
crater-core         = { path = "../core" }
axum                = { version = "0.8", features = ["ws", "macros"] }
tokio               = { workspace = true }
tower-http          = { version = "0.6", features = ["trace", "cors", "compression-gzip"] }
serde               = { workspace = true }
serde_json          = { workspace = true }
tracing             = { workspace = true }
tracing-subscriber  = { workspace = true }
anyhow              = { workspace = true }
thiserror           = { workspace = true }
clap                = { version = "4",   features = ["derive", "env"] }
uuid                = { version = "1",   features = ["v4", "serde"] }
tokio-cron-scheduler = "0.13"
futures-util        = "0.3"
chrono              = { version = "0.4", features = ["serde"] }
